syntax = "proto3";

package User;

service UserService {
  rpc getUser (UserModel) returns (UserModel) {};
}

message UserModel {
  int64 ID=1;
  string Name=2;
  string Sex=3;
  int64 Age=4;
  string summary=5;
}

//protoc -I proto/ proto/Account/UserService.proto  --go_out=plugins=grpc:proto