syntax = "proto3";

package Hello;

service HelloService {
rpc GetRes (Req) returns (Res);

}

message Req {
  int64 id = 1;
}

message Res {
  int64 id = 2;
}
//protoc -I=proto --go_out=proto proto/Message/HelloService.proto